# oop_exercise_05

./: CMakeLists.txt
oop_exercise_05/: CMakeLists.txt  Figure.h  Item.h  Item.inl  Point.cpp  Point.h  Stack.h  Stack.inl  Trapezoid.cpp  Trapezoid.h  oop_exercise_05.cpp  oop_exercise_05.h  titerator.h
