# CMakeList.txt: проект CMake для oop_exercise_05; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (oop_exercise_05 "oop_exercise_05.cpp" "oop_exercise_05.h" "Figure.h" "Item.h" "Point.cpp" "Point.h" "Stack.h" "Trapezoid.cpp" "Trapezoid.h" )

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
